Dark mode and various fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -454,7 +454,7 @@ header {
   }
 
   &__submit {
-    @include btn(100px);
+    @include btn("100px");
   }
 
   &__cancel {
@@ -539,7 +539,7 @@ header {
   }
 
   &__submit {
-    @include btn(90px);
+    @include btn("90px");
   }
 }
 
